--- a/Landing_Pages/index.html
+++ b/Landing_Pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>..:: Landing Page ::..</title>
+    <title>..:: Landing PaAAAAAAge ::..</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/b7a0eff3c2.js" crossorigin="anonymous"></script>
 </head>
@@ -68,12 +68,17 @@
 
                 
                     <iframe class="mapa-responsivo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14637.110026353093!2d-47.448846!3d-23.486512!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4ead928c70b1e690!2sEscola%20e%20Faculdade%20de%20Tecnologia%20SENAI%20Gaspar%20Ricardo%20J%C3%BAnior!5e0!3m2!1spt-BR!2sbr!4v1654214874226!5m2!1spt-BR!2sbr" width="850" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>  
+                
+                <div class="container-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zVPHbYehd1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
+
 
             </div>
         </section>
         <footer>
-            <span>Copyright &copy; 2022 - Escola Senai de Informática</span>
+            <span class="ft">Copyright &copy; 2022 - Escola Senai de Informática</span>
         </footer>
     </main>
 
