--- a/futebol/index.html
+++ b/futebol/index.html
@@ -15,8 +15,7 @@
         <a id=logo href="index.html"> <img id="img"src="./img/cll.png" alt="Euro Fut"> </img> </a>
         
         <nav id="nav">
-            <button>
-                <buton aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                     <span id="hamburger"></span>
             </button>
             <ul id="menu" role="menu">
