--- a/Landing_Pages/index.html
+++ b/Landing_Pages/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>..:: Landing PaAAAAAAge ::..</title>
+    <title>..:: Landing Page ::..</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" media="screen and (max-width:1200px)" href="./css/layout_tablet.css">
+
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/layout_smartphone.css">
+    
     <script src="https://kit.fontawesome.com/b7a0eff3c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -53,6 +58,10 @@
                     <p>São Paulo</p>
                 </div>
                 <div class="card-info">
+                    <h3>Duração</h3>
+                    <p>+90 Horas</p>
+                </div>  
+                <div class="card-info">
                     <h3>desafios</h3>
                     <p>+30 Desafios</p>
                 </div>
@@ -71,7 +80,7 @@
                 </div>  
                 
                 <div class="container-video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zVPHbYehd1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="video-responsivo" width="560" height="315" src="https://www.youtube.com/embed/zVPHbYehd1I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
 
