--- a/Landing_Pages/index.html
+++ b/Landing_Pages/index.html
@@ -28,6 +28,11 @@
             </a>
         </div>
     </header>
+    <section class="whatsapp">
+        <div class="conteiner-grid logo-whats">
+            <a href="https://wa.me/5515988315997" target="_blank"><img src="./img/zap.png"></a>
+        </div>
+    </section>
     <main>
         <div class="banner">
             <div class="container-grid conteudo-banner">
